<resources>
    <string name="app_name">vortex-events</string>
    <string name="lottery_policy">
        <![CDATA[
        Lottery Policy Statement

        1. Purpose of the Lottery
        To ensure that all participants have an equal opportunity to join the event, a random lottery system will be used to select final registrants from the waitlist.

        2. Registration and Waitlist
        - During the registration period, users may submit an application to join the event waitlist.
        - No new applications will be accepted after the registration deadline.

        3. Lottery Process
        - The lottery will be conducted after the registration period ends.
        - The system will randomly select the required number of participants from the valid waitlist and automatically send notifications to selected entrants.
        - If a selected entrant fails to complete registration within the specified time or voluntarily declines, the system will draw a replacement entrant from the waitlist following the same rules.

        4. Fairness and Transparency
        - The lottery is executed automatically by the system to ensure complete randomness, without any human interference.
        - All valid applications have an equal chance of being selected.
        - The system does not adjust lottery probabilities based on submission time, personal information, or other factors.

        5. User Confirmation
        Before joining the waitlist, users must read and understand the above lottery rules and check the confirmation box to proceed with the application.

        6. Supplementary Provisions
        - This lottery policy applies to all events requiring a lottery process.
        - The organizer reserves the right to put limit on maximum load of waiting list.
        ]]>
    </string>
    <string name="create_new_event">Create New Event</string>
    <string name="name_of_event">Name of event</string>
    <string name="name">Name</string>
    <string name="location">location</string>
    <string name="a_place">a place</string>
    <string name="time_of_event">Time of event</string>
    <string name="yyyy_mm_dd_hh_mm">YYYY-MM-DD, HH:MM</string>
    <string name="tag">Tag</string>
    <string name="start_with">start with #</string>
    <string name="capacity">capacity</string>
    <string name="number_of_capacity">number of capacity</string>
    <string name="registration_period">Registration period</string>
    <string name="end_at_yyyy_mm_dd_hh_mm">end at: YYYY-MM-DD, HH:MM</string>
    <string name="description">Description</string>
    <string name="value">Value</string>
    <string name="waiting_list_limit">waiting list limit</string>
    <string name="geolocation_requirement">Geolocation requirement</string>
    <string name="poster_upload">Poster upload</string>
    <string name="submit">Submit</string>
    <string name="home">Home</string>
    <string name="scan_qr">Scan QR</string>
    <string name="create">Create</string>
    <string name="search">Search</string>
    <string name="explore">Explore</string>
    <string name="details">details</string>
    <string name="event_image">Event image</string>
    <string name="participantsViewTitle">Participants</string>
    <string name="create_profile">Create profile</string>
    <string name="your_name">Your Name</string>
    <string name="event_details">Event Details</string>
    <string name="capacity1">Capacity</string>
    <string name="edit_event">Edit event</string>
    <string name="loading">Loading</string>
    <string-array name="item_dropdown">
        <item>Accepted</item>
        <item>Declined</item>
        <item>Waitlist</item>
    </string-array>
    <string name="end_of_event">End of event</string>
    <string name="start_at_yyyy_mm_dd_hh_mm">start at: YYYY-MM-DD, HH:MM</string>

    <string name="empty"></string>
    <string name="no_enrolled_entrants">No enrolled entrants yet</string>
    <string name="notifications_dashboard">Notifications dashboard</string>
    <string name="push_to_declined_applicants">Push to declined applicants</string>
    <string name="title">Title</string>
    <string name="notification_title">Notification Title</string>
    <string name="content">content</string>
    <string name="notification_content">Notification Content</string>
    <string name="push_to_waitlisted_applicants">Push to waitlisted applicants</string>
    <string name="push_to_accepted_applicants">Push to accepted applicants</string>
    <string name="notification_dashboard">Notification Dashboard</string>
    <string name="title_activity_map_entrants">MapEntrants</string>
    <string name="map_of_entrants">Map of Entrants</string>
    <string name="back">Back</string>
    <string name="notifications_dashboard">Notifications dashboard</string>
    <string name="push_to_declined_applicants">Push to declined applicants</string>
    <string name="title">Title</string>
    <string name="notification_title">Notification Title</string>
    <string name="content">content</string>
    <string name="notification_content">Notification Content</string>
    <string name="push_to_waitlisted_applicants">Push to waitlisted applicants</string>
    <string name="push_to_accepted_applicants">Push to accepted applicants</string>
    <string name="notification_dashboard">Notification Dashboard</string>

</resources>