<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrganizerNotificationsDashboard">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_navigation"
        android:fillViewport="true"
        android:background="@color/white"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp"
            android:weightSum="100"

            >

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginBottom="24dp"
                android:text="@string/notification_dashboard"
                android:textColor="@android:color/black"
                android:textSize="28sp"


                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notification_title"
                android:textSize="16sp" />

            <EditText

                android:id="@+id/notification_title_editor"
                android:layout_width="341dp"
                android:layout_height="40dp"
                android:layout_marginBottom="16dp"
                android:autofillHints=""
                android:background="@drawable/edit_text_border"
                android:hint="@string/title"
                android:inputType="textCapWords" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notification_content"
                android:textSize="16sp" />

            <EditText

                android:id="@+id/notification_content_editor"
                android:layout_width="341dp"
                android:layout_height="80dp"
                android:layout_marginBottom="16dp"
                android:autofillHints=""
                android:background="@drawable/edit_text_border"
                android:hint="@string/content"
                android:inputType="textCapWords" />





            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="65"
                >

            </View>


            <Button
                android:id="@+id/btn_push_to_declined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/porject_pink"
                android:paddingVertical="12dp"
                android:text="Push to group"
                android:textColor="@android:color/white"
                android:textSize="18sp" />



        </LinearLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:outlineAmbientShadowColor="@color/black"
        app:itemIconSize="30dp"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/bottom_nav_menu" />


</androidx.constraintlayout.widget.ConstraintLayout>