<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationScreen">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="24dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"
        android:weightSum="1"
        >

        <TextView
            android:id="@+id/registration_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginBottom="24dp"
            android:text="@string/create_profile"
            android:textColor="@android:color/black"
            android:textSize="28sp"


            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_name"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/name_field_sign_up"
            android:layout_width="341dp"
            android:layout_height="40dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/edit_text_border"
            android:hint="@string/name"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Email Address"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/email_field"
            android:layout_width="341dp"
            android:layout_height="40dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/edit_text_border"
            android:hint="A Valid Email Address"
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Phone Number"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/phone_field"
            android:layout_width="341dp"
            android:layout_height="40dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/edit_text_border"
            android:focusable="false"
            android:hint="A Valid phone number"
            android:inputType="text" />
        <View
            android:layout_height="0"
            android:layout_width="match_parent"
            android:layout_weight="0.7"
            >

        </View>

        <Button
            android:id="@+id/sign_up_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/black"
            android:paddingVertical="12dp"
            android:text="@string/submit"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:outlineAmbientShadowColor="@color/black"
        app:itemIconSize="30dp"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/bottom_nav_menu" />







</androidx.constraintlayout.widget.ConstraintLayout>