<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".EventDetails">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/event_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingBottom="8dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="back_button"
            app:srcCompat="@drawable/ic_back_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/event_details_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/name_of_event"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:maxLines="2"
            android:ellipsize="end"
            app:layout_constraintStart_toEndOf="@id/backButton"
            app:layout_constraintEnd_toStartOf="@id/btn_more"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <ImageButton
            android:id="@+id/btn_more"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="More Options"
            android:src="@drawable/more"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@id/event_header"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <FrameLayout
                android:id="@+id/fl_poster_upload"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginBottom="16dp"
                android:background="#E0E0E0">

                <ImageView
                    android:id="@+id/iv_poster_preview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:contentDescription="Event Poster"
                    android:scaleType="centerCrop" />

                <ImageView
                    android:id="@+id/iv_upload_icon"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:contentDescription="Upload"
                    android:src="@drawable/ic_upload"
                    app:tint="#757575" />
            </FrameLayout>

            <TextView
                android:id="@+id/event_details_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:drawablePadding="8dp"
                android:textSize="16sp"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/event_details_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Time"
                android:textSize="16sp"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/event_details_capacity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/capacity1"
                android:textSize="16sp"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/event_details_reg_period"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Registration period ends"
                android:textSize="16sp"
                android:layout_marginBottom="16dp"/>

            <TextView
                android:id="@+id/event_details_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Description"
                android:textSize="16sp"
                android:layout_marginBottom="24dp"/>

            <ImageView
                android:id="@+id/event_details_qr"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="qr_code"
                android:layout_marginBottom="24dp"/>

            <Button
                android:id="@+id/btn_details_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/loading"
                android:textSize="16sp"
                android:layout_marginBottom="8dp"/>

            <Button
                android:id="@+id/accept"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/project_pink"
                android:text="Accept"
                android:textColor="@android:color/white"
                android:visibility="gone"
                android:layout_marginBottom="8dp"/>

            <Button
                android:id="@+id/decline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/project_pink"
                android:text="Decline"
                android:textColor="@android:color/white"
                android:visibility="gone"
                android:layout_marginBottom="8dp"/>

            <Button
                android:id="@+id/edit_event_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/project_pink"
                android:text="Participants"
                android:textColor="@android:color/white"
                android:visibility="gone"
                android:layout_marginBottom="8dp"/>

            <Button
                android:id="@+id/organizer_notifications_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/project_pink"
                android:text="@string/notifications_dashboard"
                android:textColor="@android:color/white"
                android:visibility="gone"
                android:layout_marginBottom="8dp"/>

            <Button
                android:id="@+id/btn_details_open_map"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/project_pink"
                android:text="Open Map"
                android:textColor="@android:color/white"
                android:visibility="gone"
                android:layout_marginBottom="8dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="60dp" />

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:elevation="8dp"
        app:labelVisibilityMode="labeled"
        app:menu="@menu/bottom_nav_menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>